; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/usbvision/extr_usbvision-core.c_usbvision_frames_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/usbvision/extr_usbvision-core.c_usbvision_frames_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_usbvision = type { i64, i32*, i32 }

@DBG_FUNC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"free %d frames\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usbvision_frames_free(%struct.usb_usbvision* %0) #0 {
  %2 = alloca %struct.usb_usbvision*, align 8
  store %struct.usb_usbvision* %0, %struct.usb_usbvision** %2, align 8
  %3 = load i32, i32* @DBG_FUNC, align 4
  %4 = load %struct.usb_usbvision*, %struct.usb_usbvision** %2, align 8
  %5 = getelementptr inbounds %struct.usb_usbvision, %struct.usb_usbvision* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = call i32 @PDEBUG(i32 %3, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i64 %6)
  %8 = load %struct.usb_usbvision*, %struct.usb_usbvision** %2, align 8
  %9 = getelementptr inbounds %struct.usb_usbvision, %struct.usb_usbvision* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %24

12:                                               ; preds = %1
  %13 = load %struct.usb_usbvision*, %struct.usb_usbvision** %2, align 8
  %14 = getelementptr inbounds %struct.usb_usbvision, %struct.usb_usbvision* %13, i32 0, i32 1
  %15 = load i32*, i32** %14, align 8
  %16 = load %struct.usb_usbvision*, %struct.usb_usbvision** %2, align 8
  %17 = getelementptr inbounds %struct.usb_usbvision, %struct.usb_usbvision* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @usbvision_rvfree(i32* %15, i32 %18)
  %20 = load %struct.usb_usbvision*, %struct.usb_usbvision** %2, align 8
  %21 = getelementptr inbounds %struct.usb_usbvision, %struct.usb_usbvision* %20, i32 0, i32 1
  store i32* null, i32** %21, align 8
  %22 = load %struct.usb_usbvision*, %struct.usb_usbvision** %2, align 8
  %23 = getelementptr inbounds %struct.usb_usbvision, %struct.usb_usbvision* %22, i32 0, i32 0
  store i64 0, i64* %23, align 8
  br label %24

24:                                               ; preds = %12, %1
  ret void
}

declare dso_local i32 @PDEBUG(i32, i8*, i64) #1

declare dso_local i32 @usbvision_rvfree(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
